--- a/style.css
+++ b/style.css
@@ -19,6 +19,9 @@ nav li {display: inline;
     font-size: 22px;
     text-decoration: none;}
 
+    nav a:hover {color: blue;
+    text-decoration: underline;}
+
 
 .produtos{width: 940px;
 margin: 0 auto;
@@ -26,6 +29,33 @@ padding: 50px 0;}
 
 .produtos li {display: inline-block;
 text-align: center;
-width: 30%;
-vertical-align: top;}
+width: 25%;
+vertical-align: top;
+margin: 0 1.5%;
+padding: 30px 20px;
+box-sizing: border-box;
+border: 2px solid black;
+border-radius: 10px;
+}
 
+
+.produtos li:hover { border-color: blue;}
+
+.produtos li:active { border-color:blue ;}
+
+.produtos li:hover h2 {
+    font-size: 40px;}
+
+.descrição{ font-size: 18px;
+       }
+
+.preço{font-size: 22px;
+    font-weight: bold;
+    margin-top: 10px;}
+
+
+    footer{ text-align: center;
+    background-color: black;}
+
+
+.rodapé{ color: aliceblue;}
